trunk/Archive/15f3b29d734e0b4f765cf6fddc19896d-fcf98f666e0b68774061981371328429/output
+ g++-4.8 -std=c++11 -Wall -pedantic -O2 -pthread main.cpp
main.cpp: In instantiation of ‘struct A<NO>’:
main.cpp:21:11:   required from here
main.cpp:12:5: error: no type named ‘type’ in ‘struct std::enable_if<false, void>’
     A(int n) : val(n) {}
     ^
